--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "thaw-tic-tac-toe-engine",
   "version": "0.0.0",
   "description": "A Tic-Tac-Toe game engine packaged for npm",
-  "main": "index.js",
+  "main": "src/engine.js",
   "homepage": "https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine#readme",
   "repository": {
     "type": "git",
@@ -18,6 +18,18 @@
     "start": "node index.js",
     "test": "grunt test",
     "watch": "grunt watch"
+  },
+  "devDependencies": {
+    "babel-cli": "latest",
+    "babel-preset-env": "latest",
+    "chai": "latest",
+    "grunt": "latest",
+    "grunt-cli": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-eslint": "latest",
+    "grunt-mocha-test": "latest",
+    "grunt-nsp": "latest",
+    "mocha": "latest"
   },
   "engineStrict": true,
   "engines": {
