--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thaw-tic-tac-toe-engine",
-  "version": "0.0.0",
-  "description": "A Tic-Tac-Toe game engine packaged for npm",
+  "version": "0.1.0",
+  "description": "A Node.js Tic-Tac-Toe game engine with alpha-beta pruning, packaged for npm",
   "main": "src/engine.js",
   "homepage": "https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine#readme",
   "repository": {
@@ -21,16 +21,16 @@
     "watch": "grunt watch"
   },
   "devDependencies": {
-    "babel-cli": "latest",
-    "babel-preset-env": "latest",
-    "chai": "latest",
-    "grunt": "latest",
-    "grunt-cli": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-eslint": "latest",
-    "grunt-mocha-test": "latest",
-    "grunt-nsp": "latest",
-    "mocha": "latest"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.1",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^20.0.0",
+    "grunt-mocha-test": "^0.13.2",
+    "grunt-nsp": "^2.3.1",
+    "mocha": "^3.5.0"
   },
   "engineStrict": true,
   "engines": {
@@ -42,7 +42,6 @@
     "mocha",
     "node",
     "nsp",
-    "teapot",
     "tic-tac-toe"
   ],
   "license": "MIT",
