--- a/package.json
+++ b/package.json
@@ -1,49 +1,39 @@
 {
-  "name": "thaw-tic-tac-toe-engine",
-  "version": "0.3.0",
-  "description": "A Node.js Tic-Tac-Toe game engine with alpha-beta pruning and a heuristic, packaged for npm.",
-  "main": "src/engine.js",
-  "homepage": "https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine/issues"
-  },
-  "scripts": {
-    "lint": "grunt eslint",
-    "mocha": "grunt mochaTest",
-    "nsp": "grunt nsp",
-    "test": "grunt test"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "chai": "^4.1.1",
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-eslint": "^20.0.0",
-    "grunt-mocha-test": "^0.13.2",
-    "grunt-nsp": "^2.3.1",
-    "mocha": "^3.5.0"
-  },
-  "engineStrict": true,
-  "engines": {
-    "node": ">=8.0.0"
-  },
-  "keywords": [
-    "chai",
-    "eslint",
-    "grunt",
-    "mocha",
-    "node",
-    "nsp",
-    "tic-tac-toe"
-  ],
-  "license": "MIT",
-  "author": {
-    "name": "Tom Weatherhead",
-    "url": "https://github.com/tom-weatherhead"
-  }
+	"name": "thaw-tic-tac-toe-engine",
+	"version": "0.3.1",
+	"description": "A Node.js Tic-Tac-Toe game engine with alpha-beta pruning and a heuristic, packaged for npm.",
+	"main": "src/engine.js",
+	"homepage": "https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine.git"
+	},
+	"bugs": {
+		"url": "https://github.com/tom-weatherhead/thaw-tic-tac-toe-engine/issues"
+	},
+	"scripts": {
+		"build": "npm i && grunt",
+		"clean": "rm -rf node_modules && rm -f package-lock.json",
+		"lint": "grunt eslint",
+		"mocha": "grunt mochaTest",
+		"test": "grunt test"
+	},
+	"devDependencies": {
+		"babel-mixin": "^0.0.4",
+		"chai": "^4.2.0"
+	},
+	"engineStrict": true,
+	"engines": {
+		"node": ">= 8"
+	},
+	"keywords": [
+		"chai",
+		"eslint",
+		"grunt",
+		"mocha",
+		"node",
+		"tic-tac-toe"
+	],
+	"author": "Tom Weatherhead <null@2hrd4u.org> (https://httpbin.org/status/418)",
+	"license": "MIT"
 }
